--- a/vignettes/UserGuide.Rmd
+++ b/vignettes/UserGuide.Rmd
@@ -9,11 +9,12 @@ output:
     code_folding: "show"
     template: assets/resources/template_lifecycle.html
     css: assets/resources/html_report.css
+    self_contained: true
 logo: assets/resources/DNAsmokeR.jpg
 vignette: >
   %\VignetteIndexEntry{User Guide}
   %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteEncoding{UTF-8}
+  \usepackage[utf8]{inputenc}
 ---
 
 ***
