updated available functions

--- a/vignettes/UserGuide.Rmd
+++ b/vignettes/UserGuide.Rmd
@@ -31,6 +31,12 @@ knitr::opts_chunk$set(
 Load the package
 
 ```{r setup}
+knitr::opts_chunk$set(
+	eval = FALSE,
+	message = FALSE,
+	warning = FALSE,
+	include = TRUE
+)
 library(DNAsmokeR)
 ```
 
