--- a/vignettes/UserGuide.Rmd
+++ b/vignettes/UserGuide.Rmd
@@ -30,12 +30,7 @@ knitr::opts_chunk$set(
 
 Load the package
 
-```{r setup}
-knitr::opts_chunk$set(
-	message = FALSE,
-	warning = FALSE,
-	include = TRUE
-)
+```{r eval=FALSE, message=FALSE, warning=FALSE, include=TRUE}
 library(DNAsmokeR)
 ```
 
